@@ -640,7 +640,7 @@ WITH RECURSIVE account_headings AS (
     SELECT id, accno, 1 as level, accno as path
       FROM account_heading
     UNION ALL
-    SELECT ah.id, ah.accno, at.level + 1 as level, at.path  || '||||' accno
+    SELECT ah.id, ah.accno, at.level + 1 as level, at.path  || '||||' || ah.accno
       FROM account_heading ah
       JOIN account_headings at ON ah.parent_id = at.id
 )
@@ -651,6 +651,35 @@ CREATE OR REPLACE FUNCTION gifi__list() RETURNS SETOF gifi
 LANGUAGE SQL AS
 $$
 SELECT * FROM gifi ORDER BY accno;
+$$;
+
+CREATE OR REPLACE FUNCTION account_heading__check_tree()
+RETURNS TRIGGER LANGUAGE PLPGSQL AS $$
+BEGIN
+
+PERFORM* from ( 
+  WITH RECURSIVE account_headings AS (
+      SELECT id, accno, 1 as level, accno as path
+        FROM account_heading
+      UNION ALL
+      SELECT ah.id, ah.accno, at.level + 1 as level, at.path  || '||||' || ah.accno
+        FROM account_heading ah
+        JOIN account_headings at ON ah.parent_id = at.id
+       WHERE NOT ah.accno = ANY(string_to_array(path, '||||'))
+  )
+  SELECT * 
+    FROM account_heading ah
+    JOIN account_headings at ON ah.parent_id = at.id
+   WHERE at.path || '||||' ||  ah.accno NOT IN 
+          (select path from account_headings)
+) x;
+
+IF found then
+   RAISE EXCEPTION 'ACCOUNT_HEADING_LOOP';
+END IF;
+
+RETURN NEW;
+end;
 $$;
 
 update defaults set value = 'yes' where setting_key = 'module_load_ok';
