@@ -272,3 +272,8 @@ group by c.id, c.accno, c.description, c.category, c.heading,
 BEGIN;
 UPDATE language SET code = 'ms_MY' WHERE code = 'my';
 COMMIT;
+
+BEGIN;
+CREATE TRIGGER loop_detection AFTER INSERT OR UPDATE ON account_heading
+FOR EACH ROW EXECUTE PROCEDURE account_heading__check_tree();
+COMMIT;
